--- a/about-me.html
+++ b/about-me.html
@@ -20,7 +20,7 @@
 						<a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
 					</li>
 					<li role="presentation">
-						<a href="about-me.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About Me</a>
+						<a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About Me</a>
 					</li>
 					<li role="presentation">
 						<a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
